--- a/src/index.html
+++ b/src/index.html
@@ -13,13 +13,18 @@
 </head>
 
 <body>
+  <div class="container">
     <div class="card">
       <span  class="palo-superior">&spades;</span>
       <div id="cardnumber" class="number"></div>
       <span class="palo-inferior">&spades;</span>
     </div>
-    
-
+    <button id="newCard">Nueva Carta</button>
+    <div id="historial">
+  <h3>Historial de Cartas</h3>
+  <div id="lista-historial"></div>
+</div>
+  </div>
   <!-- Do not delete this script tag, this is what connects your HTML with the Javascript code -->
   <script type="module" src="/app.js"></script>
 </body>
